--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,15 +1,62 @@
+body {
+	margin: 0;
+	padding: 0;
+	background-color: #fff;
+}
+
+nav {
+    background-color: #F05F40;
+    color: #fff;
+
+}
+.abouth {
+    text-align: center;
+}
+
+#aboutp {
+    font-size: 1.25em;
+    text-align: center;
+}
+
+
 .overflow {
 	overflow-y: scroll;
 	height: 500px;
 }
+span {
+    color: #ffc200;
+}
 
+img {
+    height: 30px;
+    width: 30px;
+}
 
 .home {
-	height: 600px;
+	height: 400px;
 }
 
 .about {
-	height: 600px;
+    margin-top: 60px;
+	height: 400px;
+}
+
+.skillsdiv {
+    margin: 0 auto;
+    text-align: center;
+    width: 70%;
+}
+
+.skills li{
+    display:inline-block;
+    font-size: 1.25em;
+    padding: 20px;
+    list-style-type: none;
+}
+
+.skills li:hover{
+    color:#ffc200;
+    transition: color 0.15s linear
 }
 
 .projects {
@@ -33,8 +80,51 @@
 	text-transform: uppercase;
 }
 
-#main {
+.main {
 	text-transform: uppercase;
 }
+
+
+
+hr.primary {
+
+  border-width: 3px;
+  max-width: 50px;
+  margin-top:20px;
+  margin-bottom: 20px;
+  border:0;
+  border-top:4px solid #F05F40;
+}   
+
+hr.about-hr {
+	 padding: 0;
+    border: none;
+    border-top: medium double black;
+    color: black;
+    text-align: center;
+}
+
+
+
+hr.style-eight {
+    padding: 0;
+    border: none;
+    border-top: medium double #333;
+    color:  #ffc200;
+    text-align: center;
+}
+hr.style-eight:after {
+    content: "§";
+    display: inline-block;
+    position: relative;
+    top: -0.7em;
+    font-size: 1.5em;
+    padding: 0 0.25em;
+    background: white;
+}
+
+
+
+
 
 
